--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>241130655</title>
+    <title>241130655_Bryan_Lauda</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./download" alt="pic">
+    </header>
+    <h1 class="judul1">Produk Pakaian</h1>
 </body>
 </html>
