--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./kamu.css">
     <title>241130655_Bryan_Lauda</title>
 </head>
 <body>
     <header>
-        <img src="./download" alt="pic">
+        <p class="wa">Tokopedia.</p1>
+        
     </header>
+    
+    <img src="./download.jpg" alt="pic" width="100px">
     <h1 class="judul1">Produk Pakaian</h1>
 </body>
 </html>
