--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
         <p class="wa">Tokopedia.</p1>
         
     </header>
-    
+    <nav>
+        <ul>
+            <a href="#">Pakaian</a>
+            <a href="#">Elektronik</a>
+            <a href="#">Furnituree</a>
+        </ul>
+    </nav>
     <img src="./download.jpg" alt="pic" width="100px">
-    <h1 class="judul1">Produk Pakaian</h1>
+    <section class="baju">
+        <h1 class="judul1">Produk pakaian</h1>
+    </section>
 </body>
 </html>
