--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                             <li>Metal Door</li>
                             <li>Jumbo Freezer</li>
                             <li>Tempered Glass Rack</li>
-                            <li>Perfect Door Sealed/li>
+                            <li>Perfect Door Sealed</li>
+                            <li>Direct cooling</li>
                         </ul>
                         <p>Sebagai Pengingat:</p>
                         <p>Kami hanya mengirimkan produk dengan ukuran dan jumlah sesuai pesanan pelanggan. Demi menjaga eksklusivitas dan kualitas, setiap pembelian bersifat final—tidak dapat dikembalikan, ditukar, atau direfund.</p>
